kubernetes/gateway/backend-demo-v2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-demo-v2
  labels:
    app: backend-demo-v2
spec:
  selector:
    matchLabels:
      app: backend-demo-v2
  replicas: 1
  template:
    metadata:
      labels:
        app: backend-demo-v2
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name: app
        image: lailemon/backend-demo:v0.0.1
        imagePullPolicy: IfNotPresent
        args: ["--config", "/backend-demo/conf.yml"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  8000
          name: http
        volumeMounts:
        - name: config
          mountPath: /backend-demo
      volumes:
        - name: config
          configMap:
            name: backend-demo-v2
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: backend-demo-v2
spec:
  selector:
    app: backend-demo-v2
  type: LoadBalancer
  ports:
  - name: http
    port:  8000
    targetPort:  8000
